未来ビジョン

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -352,20 +352,35 @@ PBL授業では，アプリの実装が完了した後で，
 %\small\setlength{\baselineskip}{12pt}
 %\footnotesize\setlength{\baselineskip}{12pt}
 
-(本行を含む下記の説明を削除してから，記入すること．)
+本研究のシステムは実証データが未取得なため，
+アプリケーションのデザインを支援するシステムだけでなく
+アプリケーション開発のプロジェクトにおける
+マネジメントの支援を行うシステムとしても
+執筆している．
+しかし著者らがこの研究の先に見ているものは，
+作成される人工物のデザインに関する認識論を変えることである．
+質の高いプロダクトを作るに当たり，
+作り手には高い専門性や先端的な技術に焦点が当てられ，
+多様なメンバ間のコミュニケーションに関しては，
+ものづくりに直接影響を与えるものというより，
+むしろ二次的に専門性をもつ人材がそれぞれの立場から分業的に参加し
+アイデア出しやリスク管理，計画を滞りなく進めるための
+マネジメントの視点で語られることが多ように感じている．
 
-未来ビジョンについては，必須とせず任意とする．論文本体とは別
-に，「この研究はどういう未来を切り拓くのか」について，著者の視点からア
-ピールしたい点があれば，このような欄を設けて設けて自由に議論してよい．
-例えば，「こういう未来社会が到来して欲しいから，我々の研究でこう貢献
-していきたい」，「主張が大きすぎて本文中では書きにくかったが，この研究
-は，実はこういう気持ちで研究している」，「現在の実装では，小さいトピック
-であるかのように誤解を招きやすいが，本当はこういう大きなことを狙って，そ
-の第一歩として研究に取り組んでいる」のように，研究の未来，魅力を語る場と
-して利用できる．大きさや形状はこのサンプルを目安とするが，この枠内であればある程
-度改変してもよいものとする．
+しかし，人の手によって作成される人工物は
+個々のインプットとアウトプットという単純なプロセスで
+生み出されるものではない．むしろ様々な背景を持つ
+メンバ間の人間関係のあり方それ自体が人工物の
+デザインにも大きく影響する．人工物の生成過程については
+状況論的な観点から過去研究でも示されている．
 
-てすとてすとてすとてすとてすとてすとてすとてすとてすとてすと．てすとてすとてすとてすとてすとてすとてすとてすとてすとてすと．てすとてすとてすとてすとてすとてすとてすとてすとてすとてすと．てすとてすとてすとてすとてすとてすとてすとてすとてすとてすと．てすとてすとてすとてすとてすとてすとてすとてすとてすとてすと．てすとてすとてすとてすとてすとてすとてすとてすとてすとてすと．てすとてすとてすとてすとてすとてすとてすとてすとてすとてすと．
+そのため，筆者らは人工物としてのソフトウェア開発においても
+メンバ間の関係構築のあり方そのものからデザインを考える認識論を持って
+アプリケーションを作成する必要があると考えている．
+本研究で開発したシステムがその手助けに
+なるように今後の研究を進めて行きたい．
+
+．
 %% 文章を補う図表を利用してもよい．
 \vspace*{5mm}
 \includegraphics[width=0.95\columnwidth]{vision.eps}
