未来ビジョン修正

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -363,14 +363,16 @@ PBL授業では，アプリの実装が完了した後で，
 作り手には高い専門性や先端的な技術に焦点が当てられ，
 多様なメンバ間のコミュニケーションに関しては，
 ものづくりに直接影響を与えるものというより，
-むしろ二次的に専門性をもつ人材がそれぞれの立場から分業的に参加し
-アイデア出しやリスク管理，計画を滞りなく進めるための
-マネジメントの視点で語られることが多ように感じている．
+むしろ二次的なマネジメントの視点で語られることが多いのではないか．
+つまり，専門性をもつ人材がそれぞれの立場から分業的に参加し
+アイデア出しやリスク管理，計画を滞りなく進めるためのものという認識である．
 
-しかし，人の手によって作成される人工物は
-個々のインプットとアウトプットという単純なプロセスで
-生み出されるものではない．むしろ様々な背景を持つ
-メンバ間の人間関係のあり方それ自体が人工物の
+しかし，人の手によって作成される人工物は，
+各々の専門性に従い，分業的に
+個々のインプットとアウトプットを正確に行えば
+生み出されるという単純なものではない．
+むしろ様々な背景を持つメンバ間の交渉，学習，ディスコースの変化といった
+人間関係のあり方それ自体が人工物の
 デザインにも大きく影響する．人工物の生成過程については
 状況論的な観点から過去研究でも示されている．
 
