--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -290,7 +290,7 @@ PBL授業では，アプリの実装が完了した後で，
 学部横断型PBLのアプリ開発の際に改善点を精査し，修正する予定である．
 
 % FIXME: ここで未来ビジョンを調整する？
-% \vspace{100mm}
+\vspace{100mm}
 
 % \section*{謝辞}
 % TODO: 書く
