未来ビジョン微調整

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -353,17 +353,17 @@ PBL授業では，アプリの実装が完了した後で，
 %\footnotesize\setlength{\baselineskip}{12pt}
 
 本研究のシステムは実証データが未取得なため，
-アプリケーションのデザインを支援するシステムだけでなく
+アプリケーションのデザインを支援するシステムだけでなく，
 アプリケーション開発のプロジェクトにおける
 マネジメントの支援を行うシステムとしても
 執筆している．
-しかし著者らがこの研究の先に見ているものは，
+しかし著者らがこの研究の先に見ていることは，
 作成される人工物のデザインに関する認識論を変えることである．
 質の高いプロダクトを作るに当たり，
 作り手には高い専門性や先端的な技術に焦点が当てられ，
 多様なメンバ間のコミュニケーションに関しては，
 ものづくりに直接影響を与えるものというより，
-むしろ二次的なマネジメントの視点で語られることが多いのではないか．
+むしろ二次的なマネジメントの視点で語られることが多いのではないだろうか．
 つまり，専門性をもつ人材がそれぞれの立場から分業的に参加し
 アイデア出しやリスク管理，計画を滞りなく進めるためのものという認識である．
 
@@ -371,12 +371,12 @@ PBL授業では，アプリの実装が完了した後で，
 各々の専門性に従い，分業的に
 個々のインプットとアウトプットを正確に行えば
 生み出されるという単純なものではない．
-むしろ様々な背景を持つメンバ間の交渉，学習，ディスコースの変化といった
+むしろ様々な背景を持つメンバ間の交渉や学習，ディスコースの変化といった
 人間関係のあり方それ自体が人工物の
 デザインにも大きく影響する．人工物の生成過程については
 状況論的な観点から過去研究でも示されている．
 
-そのため，筆者らは人工物としてのソフトウェア開発においても
+そのため，筆者らは人工物としてのソフトウェア開発においても，
 メンバ間の関係構築のあり方そのものからデザインを考える認識論を持って
 アプリケーションを作成する必要があると考えている．
 本研究で開発したシステムがその手助けに
