アプリに統一

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -66,23 +66,22 @@
 グローバル化のもとで社会は複雑化し，ICTの進歩はめざましく，
 様々な業種や分野でソフトウェア・アプリケーション(以下，アプリと表記する)が
 なくてはならないものとなっている．
-現在のアプリの開発は，プログラマのみで完結することは少なく，
+現在のアプリ開発は，プログラマのみで完結することは少なく，
 多様な背景を持つメンバと協働で行われる．
 またアプリ開発において，様々なICTツールが導入され，
-アプリの開発環境それ自体も変化している．
+アプリ開発の環境それ自体も変化している．
 
 
 本研究は，過去に行った異なる背景を持つプロジェクトメンバの関係構築のあり方が，
-開発されるアプリケーションのデザインにどのような影響を及ぼすかという
+開発されるアプリのデザインにどのような影響を及ぼすかという
 研究\cite{preStudy}の結果に基に行われたものである．
 筆者らのこれまでの研究は大学の学部横断型PBL(Project based learning)を対象として行われており，
 その結果をもとに本研究は，道具やテクノロジーの開発によって人々の協調的作業を
-支援するシステムの開発を目標とした
+支援するシステムの開発を目標とした．
 CSCW(Computer Supported Cooperative Work)\cite{cscwDefin}の観点から
-アプリケーション開発の過程における，
+アプリ開発の過程における，
 背景の異なるプロジェクトメンバの関わり方を実践共同体の概念から捉え，
 可視化するシステムの開発を行う．
-
 
 本システムを利用することで，
 アプリを開発するプロジェクトメンバは，
