「おわりに」に調整

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -266,10 +266,11 @@ PBL授業では，アプリの実装が完了した後で，
 %4
 \section{おわりに}
 
-本研究で開発したシステムは，2021年度9月より実施される学部横断型PBLのアプリ開発を
-行う際に使用される予定である．開発したシステムから，
-メンバの背景と行為やメンバ間の交渉に着目し，
-アプリの機能やUIがどのように決定されていくか 分析する予定である.
+本研究で開発したシステムは，
+2021年度9月より実施される学部横断型PBLのアプリ開発を
+行う際に使用される予定である．
+開発したシステムから，メンバの背景と行為やメンバ間の交渉に着目し，
+アプリの機能やUIがどのように決定されていくか分析する予定である.
 加えてアプリ開発支援ソフトウェアがアプリ開発の過程にどのように影響を及ぼすかまで含めて分析を行う.
 
 また，本研究において開発した可視化システムについて，
@@ -283,7 +284,7 @@ PBL授業では，アプリの実装が完了した後で，
 この問題点としては，
 メンバの数が増えた際にネットワークが複雑になってしまい，
 いわゆる毛玉問題の様な現象が起きてしまうことが考えられる．
-よって，メンバの数がネットワークが複雑になった場合の，
+よって，メンバが増えてネットワークが複雑になった場合の，
 ノードのレイアウト変更や，インタラクションの追加が考えられる．
 これらの点についても，
 学部横断型PBLのアプリ開発の際に改善点を精査し，修正する予定である．
