--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -289,8 +289,23 @@ PBL授業では，アプリの実装が完了した後で，
 これらの点についても，
 学部横断型PBLのアプリ開発の際に改善点を精査し，修正する予定である．
 
+% \newpage
+\clearpage
+% \cleardoublepage
+
+% \\
+% \\
+% \\
+% \\
+% \\
+% \\
+% \\
+% \\
+% \\
+% \\
+
 % FIXME: ここで未来ビジョンを調整する？
-\vspace{100mm}
+% \vspace{100mm}
 
 % \section*{謝辞}
 % TODO: 書く
@@ -366,6 +381,8 @@ PBL授業では，アプリの実装が完了した後で，
 むしろ二次的なマネジメントの視点で語られることが多いのではないだろうか．
 つまり，専門性をもつ人材がそれぞれの立場から分業的に参加し
 アイデア出しやリスク管理，計画を滞りなく進めるためのものという認識である．
+
+\newpage
 
 しかし，人の手によって作成される人工物は，
 各々の専門性に従い，分業的に
