論文タイトルを追記

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -30,7 +30,7 @@
 %% urlのOverflow対策
 \usepackage{url}
 
-\journalhead{WISS論文タイトル} %%%%%% ←←　著者において必ず記入すること
+\journalhead{アプリ開発における異なる実践共同体の可視化システムの開発} %%%%%% ←←　著者において必ず記入すること
 
 \begin{document}
 
