--- a/wiss-long-teaser/tex/system.tex
+++ b/wiss-long-teaser/tex/system.tex
@@ -19,16 +19,16 @@
 
 本研究で開発した可視化システムは，
 Atlassian社が提供するタスク管理サービスTrello\cite{trello}と連携して動作する．
-Trelloは，タスクの情報をカード，
-タスクの状態をボードとして管理するサービスである．
-利用者は，タスクを実行した際に，
-カードを次のボードに移動させる．
-これにより，プロジェクトメンバ間でタスクの進捗状況を共有することができる．
-また，Trelloでは，カードに複数人の作業担当者を設定することが可能である．
-そこで，本システムでは，
+% Trelloは，タスクの情報をカード，
+% タスクの状態をボードとして管理するサービスである．
+% 利用者は，タスクを実行した際に，
+% カードを次のボードに移動させる．
+% これにより，プロジェクトメンバ間でタスクの進捗状況を共有することができる．
+% また，Trelloでは，カードに複数人の作業担当者を設定することが可能である．
+本システムでは，
 同じカードに割り振られた作業担当者は，
-協力してタスクを行ったという前提で，
-Trello上でのカードの移動履歴を利用することで，
+協力してタスクを行ったというように捉えることで，
+Trello上でのカードの移動履歴を利用して，
 プロジェクトメンバの関係性を可視化した．
 
 % 従来の概念図と，本システムによる可視化の比較
@@ -36,29 +36,14 @@ Trello上でのカードの移動履歴を利用することで，
 % https://nunuki.hatenablog.com/entry/2017/12/31/175302
 状況論的学習理論において，
 実践共同体とメンバの関係性は，
-図\ref{cop}と図\ref{overlap}で示したように，
+図\ref{cop}で示したように，
 領域と要素のようなかたちで表現されてきた．
-% しかし，実践共同体とプロジェクトメンバの関係性を可視化する際に，
-% 図\ref{cop}の様な表現を採用することを考えると，
-% 実践共同体の中心と，メンバの距離を表すことはできるが，
-% メンバ間の距離や，
-% メンバ間のなす角が余計な情報として表されてしまう．
-% もし，距離やなす角によって，
-% 協働でタスクを行った回数などを表すとしても，
-% メンバが四人以上のプロジェクトを対象とした場合に，
-% 二次元平面で全てのメンバの関係性を表現することはできない．
 しかし，図\ref{cop}の様な表現によって，
 実践共同体とプロジェクトメンバの関係性を可視化することを考えると，
 メンバの参加深度と同時に，
 メンバ同士の関係性を距離によって表現することは困難だと考えられる．
-また，布置を可視化する際に，
-図\ref{overlap}の様な表現を採用することを考えた場合にも，
-プロジェクトに参加している実践共同体の数が多くなった際に，
-閉曲線が複雑化してしまう可能性が考えられる．
-また，図\ref{overlap}の様な表現によって，
-布置を可視化することを考えた場合にも，
-3つ以上の実践共同体を可視化しようとした際に，
-閉曲線が複雑化してしまう可能性が考えられる．
+また，実践共同体の数が増えた際にも，
+布置を的確に表現することは困難だと考えられる．
 そこで，本研究では，
 プロジェクトメンバをノード，
 プロジェクトメンバが協力してタスクを行った履歴をエッジとして，
@@ -68,91 +53,32 @@ Trello上でのカードの移動履歴を利用することで，
 本システムによって可視化したプロジェクトメンバの関係性を，
 図\ref{cop-map-graph}に示す．
 
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-graph.eps}
-  \caption{本システムによってプロジェクトメンバの関係性を可視化した様子}
-  \label{cop-map-graph}
-\end{figure}
+ノードは力学モデルによってレイアウトされる．
+協力してタスクを行った回数によってエッジのバネ定数を変化させることで，
+頻繁に協力してタスクを行っているプロジェクトメンバを確認することができる．
 
-本システムでは，ノードのレイアウト手法として，力学モデルを採用している．
-また，協力してタスクを行った回数によってエッジのバネ定数を変化させることで，
-多くのタスクを協力して行ったノードは近くに配置されるようになっている．
-これにより，頻繁に協力してタスクを行っているプロジェクトメンバを確認することができる．
-
-また，タスクを行った回数の合計値によってノードの半径を変化させている．
+タスクを行った回数の合計値によってノードの半径を変化させている．
 これにより，プロジェクトメンバが正統的周辺参加である可能性を観察することが可能である．
-その例として，ノードは小さいが，
-他のノードとの繋がりが見られる場合が挙げられる．
-この場合は，観察対象となるプロジェクトメンバは，
-タスクを行った回数は少ないが，
-リソースへのアクセスが可能な状態だと考える事ができる．
-本システムによって，
-観察される正統的周辺参加の可能性があるプロジェクトメンバを図\ref{cop-map-lpp}に示す．
 
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-lpp.eps}
-  \caption{本システムによって観察される正統的周辺参加である可能性のあるプロジェクトメンバ}
-  \label{cop-map-lpp}
-\end{figure}
-
-さらに，プロジェクトメンバの所属先によってノードの色を変化させることで，
+プロジェクトメンバの所属先によってノードの色を変化させることで，
 異なる実践共同体に所属するプロジェクトメンバが，
-協働でタスクを行っている様子を観察するが可能である．
+協働でタスクを行っている様子を観察することが可能である．
 これにより，異なる色のノードがエッジでつながっている様子から，
 布置を観察することができる．
-本システムによって観察される布置の例を，
-図 \ref{cop-map-overlap}に示す．
 このように，布置を観察することで，
 異分野横断的なアプリ開発において，
 異なる実践共同体が協働的な関係構築を行えているかを確認し，
 必要に応じて協働的な関係構築を促すことが可能である．
-
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-overlap.eps}
-  \caption{本システムによって可視化された布置}
-  \label{cop-map-overlap}
-\end{figure}
 
 本システムでは以上のネットワーク構造を，
 プロジェクトの時系列順にアニメーションで表示することができる．
 これにより，プロジェクトメンバの関係性の変化を観察することが可能である．
 ノードの動きから，進行状況によって変化していく，
 プロジェクトメンバの軌跡を観察することができる．
-これにより，プロジェクトを振り返った際に，
-正統的周辺参加であったメンバが中心に移動する様子や，
-異なる実践共同体間で布置が構築されていく様子を観察することができる．
-% 「布置が構築される」構築されるでいいの？
-% 本システムによって観察されるプロジェクトメンバの軌跡を，
-% 図\ref{cop-map-trajectory}に示す．
 
-% TODO: 複数の画像をつなげる
-% \begin{figure}[h]
-%   \centering
-%   \includegraphics[width=0.5\textwidth]{img/cop-map-trajectory.eps}
-%   \caption{本システムによって観察されるプロジェクトメンバの軌跡}
-%   \label{cop-map-trajectory}
-% \end{figure}
-
-また，本システムではインタラクティブにデータを観察することが可能である．
-本システムで可能なインタラクションは，
-ノードのドラッグアンドドロップと，ノードへのマウスオーバーである．
-ノードをドラッグアンドドロップすることによって，
-ネットワークのレイアウトを調整することが可能である．
-また，メンバの詳細情報を確認する際には，
-ノードにマウスオーバーすることで，
-そのノードに対応するユーザ名を確認することが可能である．
-これらのインタラクションにより，
-より詳細にプロジェクトメンバの関係性を観察することが可能である．
-% インタラクションによって詳細情報を表示している様子を，
-% 図\ref{cop-map-detail}に示す．
-
-% TODO: 複数の画像をつなげる
-% \begin{figure}[h]
-%   \centering
-%   \includegraphics[width=0.5\textwidth]{img/cop-map-detail.eps}
-%   \caption{インタラクションによって詳細情報を表示している様子}
-%   \label{cop-map-detail}
-% \end{figure}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{img/cop-map-graph.eps}
+  \caption{本システムによってプロジェクトメンバの関係性を可視化した様子}
+  \label{cop-map-graph}
+\end{figure}
