終わりにを短縮

--- a/wiss-long-teaser/tex/conclusion.tex
+++ b/wiss-long-teaser/tex/conclusion.tex
@@ -1,3 +1,4 @@
+% おわりに
 
 本研究で開発したシステムは，
 2021年度9月より実施される学部横断型PBLのアプリ開発を
@@ -7,22 +8,11 @@
 加えてアプリ開発支援ソフトウェアがアプリ開発の過程にどのように影響を及ぼすかまで含めて分析を行う.
 
 また，本研究において開発した可視化システムについて，
-いくつかの改善点があげられる．
-まず，メンバがタスクを行った回数によって，
-ノードの半径を変化させている点についてである，
-半径が変化することによって，
-ノード間の可視性に影響を与えてしまうと考えられるので，
-ノードの彩度や明度を使った表現に変更することが考えられる．
-つぎに，現在のグラフ構造による可視化手法についてである．
-この問題点としては，
-メンバの数が増えた際にネットワークが複雑になってしまい，
-いわゆる毛玉問題の様な現象が起きてしまうことが考えられる．
-よって，メンバが増えてネットワークが複雑になった場合の，
-ノードのレイアウト変更や，インタラクションの追加が考えられる．
-これらの点についても，
-学部横断型PBLのアプリ開発の際に改善点を精査し，修正する予定である．
+ノードの数が増えた際の可視性の改善が必要だと考えられる．
+改善方法については，
+論文の共著関係やSNSを対象としたネットワーク可視化の先行研究をもとに検討する予定である．
 
-今後の展望として，
+また，今後の展望として，
 目標とするメンバの関係性のあり方に合わせて，
 システムからプロジェクトメンバへの協同作業の提案を行うことも考えられる．
 これにより，リソースへのアクセスができていないメンバを正統的周辺参加の状態にするきっかけを作ることができると考えられる．
