--- a/wiss-long-teaser/tex/system.tex
+++ b/wiss-long-teaser/tex/system.tex
@@ -19,12 +19,6 @@
 
 本研究で開発した可視化システムは，
 Atlassian社が提供するタスク管理サービスTrello\cite{trello}と連携して動作する．
-% Trelloは，タスクの情報をカード，
-% タスクの状態をボードとして管理するサービスである．
-% 利用者は，タスクを実行した際に，
-% カードを次のボードに移動させる．
-% これにより，プロジェクトメンバ間でタスクの進捗状況を共有することができる．
-% また，Trelloでは，カードに複数人の作業担当者を設定することが可能である．
 本システムでは，
 同じカードに割り振られた作業担当者は，
 協力してタスクを行ったというように捉えることで，
@@ -34,7 +28,7 @@ Trello上でのカードの移動履歴を利用して，
 % 従来の概念図と，本システムによる可視化の比較
 % MEMO: N個のベン図は表現可能
 % https://nunuki.hatenablog.com/entry/2017/12/31/175302
-状況論的学習理論において，
+従来の状況論的学習理論において，
 実践共同体とメンバの関係性は，
 図\ref{cop}で示したように，
 領域と要素のようなかたちで表現されてきた．
