--- a/wiss-long-teaser/tex/preResearch.tex
+++ b/wiss-long-teaser/tex/preResearch.tex
@@ -1,4 +1,16 @@
 
+本研究は，過去に行った異なる背景を持つプロジェクトメンバの
+関係構築のあり方が開発されるアプリのデザインにどのような影響を及ぼすかという研究\cite{preStudy}の結果に基に行われたものである.
+筆者らのこれまでの研究は大学の情報学部と人文学部の学部横断型PBL(Project based learning) を
+対象として行われており，
+ミーティングの録画データやインタビューデータをもとに定性的な観点から
+ディスコース分析を行っている．
+研究結果からプロジェクトメンバの関係構築の在り方が分業的関係か協働的関係に応じて、
+各プロジェクトメンバが所有する知識や技術といったリソースが
+その人間関係のあり方に相応して開発プロセスに影響し，
+アプリの機能やUIに現れるという示唆を得た.
+
+
 チームメンバーをマネジメントする観点から，
 可視化手法を用いた研究は多く存在する．
 本章では関連研究として，アプリケーション開発における
