--- a/wiss-long-teaser/tex/preResearch.tex
+++ b/wiss-long-teaser/tex/preResearch.tex
@@ -1,53 +1,43 @@
-
+\subsection{学部横断型PBLのアプリ開発の過去研究について}
 本研究は，過去に行った異なる背景を持つプロジェクトメンバの
-関係構築のあり方が開発されるアプリのデザインにどのような影響を及ぼすかという研究\cite{preStudy}の結果に基に行われたものである.
+関係構築のあり方が開発されるアプリのデザインにどのような影響を
+及ぼすかという研究\cite{preStudy}の結果に基に行われたものである.
 筆者らのこれまでの研究は大学の情報学部と人文学部の学部横断型PBL(Project based learning) を
-対象として行われており，
-ミーティングの録画データやインタビューデータをもとに定性的な観点から
-ディスコース分析を行っている．
-研究結果からプロジェクトメンバの関係構築の在り方が分業的関係か協働的関係に応じて、
-各プロジェクトメンバが所有する知識や技術といったリソースが
+対象として行われた．
+研究結果では，プロジェクトメンバの関係構築の在り方が分業的関係か協働的関係に応じて、
+プロジェクトメンバが所有する知識や技術といったリソースが
 その人間関係のあり方に相応して開発プロセスに影響し，
 アプリの機能やUIに現れるという示唆を得た.
 
+専門性に関わるタスクしか関心を向けないという分業的な関係のあり方でアプリ開発を進めた際，
+タスクをこなす際に，部分最適化する傾向があり制作された成果物は，
+異なる実践共同体の専門を組み合せるにとどまっていた．
+また異なる実践に価値をもつ両学科の学生が積極的にプロジェクトに参加する時期に齟齬がおきる傾向がみられた.
 
+他方，自分の専門を超えて一緒に作業を行う時間を設ける協働的な関係のあり方
+でアプリ開発を進めた際には，
+短期的には非効率的に見えても，アプリ開発の過程に異なる実践共同体の実践，
+つまりプログラミング書いている最中の意味の交渉や目的の修正や共有が行われ，
+お互いの専門性を融合して成果物を作成することを可能にした.
+
+\subsection{チームメンバの可視化手法について}
 チームメンバーをマネジメントする観点から，
 可視化手法を用いた研究は多く存在する．
-本章では関連研究として，アプリケーション開発における
-異なる実践共同体の参加の過程を可視化するシステム研究について，
-Trello APIを使用したアジャイル開発におけるチームメンバーの
-技術的なタスクに関連する感情の情報を可視化するシステムと，
-オンライン上の実践共同体をD3.jsを用いて可視化したシステム，
-それぞれ本研究との差異を述べ，新規性を示す.
-
-\subsection{Trello APIを用いたアジャイル支援システム}
-AmrらのEmotimonitor\cite{Emotimonitor}はチームメンバが
-自分の感情をTrelloのカードに
-絵文字で表現することを可能にした上で，
-これらを分析し，統計データを提供するものである．
-上記の機能により，アジャイル開発におけるタスクに関する
-メンバの感情状態を認識できることにより，
-マネージャーがチームメンバの感情の状態を評価し、
-チームメンバが自分の感情を振り返ることを
-支援することが目的としてある．
-
-AmrらはTrelloのカードに絵文字という感情表現の機能を
+Amrら\cite{Emotimonitor}は
+Trelloのカードに絵文字という感情表現の機能を
 拡張することによりあるチームメンバの内面を可視化し
-プロジェクトの管理を支援しているのに対して，
+プロジェクトの管理を支援している．
 本研究ではTrello APIを用いて，プロジェクトに参加する
 チームメンバ間の関係性から
-プロジェクトの実践を支援することを目的としている．　　　
-\subsection{オンライン上の実践共同体の可視化}
-YUBOら\cite{D3jsOfCop}は急速に変化する
-UX(user experience)デザインのスキルが，
-オンライン上のコミュニティでどのように学習されているかを
-実践共同体の概念から分析を行っている．
-分析したデータを用いて，D3.jsを使用してオンライン上の実践共同体の
-メンバ同士のインタラクションをネットワークとして可視化している．
+プロジェクトの実践を支援することを目的としている．　
 
-YUBOらの研究では実践共同体の概念を用いて，
+
+YUBOら\cite{D3jsOfCop}の研究では実践共同体の概念を用いて，
 UXデザインという共通した目的を持つ実践共同体のメンバのやり取りを
-D3.jsで可視化しているのに対し，
+D3.jsで可視化している．
 本研究では共通の目的を共有している実践共同体のみを分析するのではなく，
 異なる目的をもつ複数の実践共同体のやり取りを含めて
 分析してD3.jsで可視化することに特徴がある．
+
+
+
