--- a/wiss-long-teaser/tex/preResearch.tex
+++ b/wiss-long-teaser/tex/preResearch.tex
@@ -1,4 +1,5 @@
 \subsection{学部横断型PBLのアプリ開発の過去研究について}
+
 本研究は，過去に行った異なる背景を持つプロジェクトメンバの
 関係構築のあり方が開発されるアプリのデザインにどのような影響を
 及ぼすかという研究\cite{preStudy}の結果に基に行われたものである.
@@ -17,27 +18,22 @@
 他方，自分の専門を超えて一緒に作業を行う時間を設ける協働的な関係のあり方
 でアプリ開発を進めた際には，
 短期的には非効率的に見えても，アプリ開発の過程に異なる実践共同体の実践，
-つまりプログラミング書いている最中の意味の交渉や目的の修正や共有が行われ，
+つまりプログラムを書いている最中の意味の交渉や目的の修正や共有が行われ，
 お互いの専門性を融合して成果物を作成することを可能にした.
 
 \subsection{チームメンバの可視化手法について}
-チームメンバーをマネジメントする観点から，
-可視化手法を用いた研究は多く存在する．
-Amrら\cite{Emotimonitor}は
-Trelloのカードに絵文字という感情表現の機能を
-拡張することによりあるチームメンバの内面を可視化し
-プロジェクトの管理を支援している．
-本研究ではTrello APIを用いて，プロジェクトに参加する
-チームメンバ間の関係性から
-プロジェクトの実践を支援することを目的としている．　
 
+% チームメンバーをマネジメントする観点から，
+% 可視化手法を用いた研究は多く存在する．
+% Amrら\cite{Emotimonitor}は
+% Trelloのカードに絵文字という感情表現の機能を
+% 拡張することによりあるチームメンバの内面を可視化し
+% プロジェクトの管理を支援している．
+% 本研究ではTrello APIを用いて，プロジェクトに参加する
+% チームメンバ間の関係性から
+% プロジェクトの実践を支援することを目的としている．　
 
 YUBOら\cite{D3jsOfCop}の研究では実践共同体の概念を用いて，
-UXデザインという共通した目的を持つ実践共同体のメンバのやり取りを
-D3.jsで可視化している．
+UXデザインという共通した目的を持つ実践共同体のメンバのやり取りを可視化している．
 本研究では共通の目的を共有している実践共同体のみを分析するのではなく，
-異なる目的をもつ複数の実践共同体のやり取りを含めて
-分析してD3.jsで可視化することに特徴がある．
-
-
-
+異なる目的をもつ複数の実践共同体のやり取りを含めて分析し可視化することに特徴がある．
