--- a/wiss-long-teaser/wiss_template.tex
+++ b/wiss-long-teaser/wiss_template.tex
@@ -45,14 +45,14 @@
 　　尼岡 利崇${}^\dag$}
 
 \begin{abstract}
-本研究では，アプリケーション開発における異なる実践共同体の参加の過程を
+本研究では，アプリ開発における異なる実践共同体の参加の過程を
 可視化するシステムを開発した．
-著者らは過去に質的アプローチの観点から実践共同体の概念を用いて，
-異なる背景を持つプロジェクトメンバの関係のあり方が，
-開発されるアプリケーションにどのような影響を及ぼすかという研究を行った．
-その研究結果をもとにCSCW(Computer Supported Cooperative Work)の観点から，
-アプリケーション開発の過程における，
-背景の異なるプロジェクトメンバの関わり方を可視化するシステムの開発を行った．
+% 著者らは過去に質的アプローチの観点から実践共同体の概念を用いて，
+% 異なる背景を持つプロジェクトメンバの関係のあり方が，
+% 開発されるアプリケーションにどのような影響を及ぼすかという研究を行った．
+% その研究結果をもとにCSCW(Computer Supported Cooperative Work)の観点から，
+% アプリケーション開発の過程における，
+% 背景の異なるプロジェクトメンバの関わり方を可視化するシステムの開発を行った．
 本システムを使用することにより，
 異なる背景を持つメンバが参加するアプリ開発チームにおいて，
 アプリの設計から実装をメンバ間の関係構築のあり方そのものからデザインすることの
@@ -65,7 +65,7 @@
 \label{introduction}
 \input{tex/introduction}
 
-\section{予備調査}
+\section{先行研究}
 \label{preResearch}
 \input{tex/preResearch}
 
