--- a/wiss-long-teaser/tex/conclusion.tex
+++ b/wiss-long-teaser/tex/conclusion.tex
@@ -12,7 +12,7 @@
 改善方法については，
 論文の共著関係やSNSを対象としたネットワーク可視化の先行研究をもとに検討する予定である．
 
-また，今後の展望として，
+今後の展望として，
 目標とするメンバの関係性のあり方に合わせて，
 システムからプロジェクトメンバへの協同作業の提案を行うことも考えられる．
 これにより，リソースへのアクセスができていないメンバを正統的周辺参加の状態にするきっかけを作ることができると考えられる．
