--- a/wiss-long-teaser/tex/system.tex
+++ b/wiss-long-teaser/tex/system.tex
@@ -30,9 +30,9 @@ Trello上でのカードの移動履歴を利用して，
 % https://nunuki.hatenablog.com/entry/2017/12/31/175302
 従来の状況論的学習理論において，
 実践共同体とメンバの関係性は，
-図\ref{cop}で示したように，
+図\ref{cop-overlap}で示したように，
 領域と要素のようなかたちで表現されてきた．
-しかし，図\ref{cop}の様な表現によって，
+しかし，図\ref{cop-overlap}の様な表現によって，
 実践共同体とプロジェクトメンバの関係性を可視化することを考えると，
 メンバの参加深度と同時に，
 メンバ同士の関係性を距離によって表現することは困難だと考えられる．
