--- a/wiss-long-teaser/tex/conclusion.tex
+++ b/wiss-long-teaser/tex/conclusion.tex
@@ -15,4 +15,5 @@
 今後の展望として，
 目標とするメンバの関係性のあり方に合わせて，
 システムからプロジェクトメンバへの協同作業の提案を行うことも考えられる．
-これにより，リソースへのアクセスができていないメンバを正統的周辺参加の状態にするきっかけを作ることができると考えられる．
+これにより，アプリの設計から実装をメンバ間の関係構築のあり方そのものからデザインすることの
+支援を可能とすることができると考えられる．
