--- a/wiss-long-teaser/tex/introduction.tex
+++ b/wiss-long-teaser/tex/introduction.tex
@@ -1,7 +1,7 @@
 
 現在のアプリ開発は，プログラマのみで完結することは少なく，
 多様な背景を持つメンバと協働で行われる．またアプリ開発において，
-TrelloやSlackといったICTツールが導入されている．
+Trello\cite{trello}などのICTツールが導入されている．
 しかし異なる背景を有するコミュニティのメンバ同士がコミュニケーションを行う場合，
 認識論の違いから主張の食い違いや対立が起きることもあるため\cite{conflict}，
 ICTツールを導入するだけでは異なる背景を持つメンバと協働でアプリ開発を行うには不十分であり，
