--- a/wiss-long-teaser/tex/system.tex
+++ b/wiss-long-teaser/tex/system.tex
@@ -18,7 +18,7 @@
 
 
 本研究で開発した可視化システムは，
-Atlassian社が提供するタスク管理サービスTrello\cite{trello}と連携して動作する．
+Atlassian社が提供するタスク管理サービスTrelloと連携して動作する．
 本システムでは，
 同じカードに割り振られた作業担当者は，
 協力してタスクを行ったというように捉えることで，
