システム削減

--- a/wiss-long-teaser/tex/system.tex
+++ b/wiss-long-teaser/tex/system.tex
@@ -17,7 +17,7 @@
 % その関係のあり方そのものからデザインすることを可能にすることが期待されている．
 
 
-本研究で開発した可視化システムは，
+本研究で開発したシステムは，
 Atlassian社が提供するタスク管理サービスTrelloと連携して動作する．
 本システムでは，
 同じカードに割り振られた作業担当者は，
@@ -44,18 +44,15 @@ Trello上でのカードの移動履歴を利用して，
 プロジェクトの状況をネットワーク構造によって表現した．
 これにより，複雑なメンバの関係性や，
 異なる実践共同体間の関係性を観察することが可能である．
-本システムによって可視化したプロジェクトメンバの関係性を，
-図\ref{cop-map-graph}に示す．
+本システムによって可視化したプロジェクトメンバの関係性を図\ref{cop-map-graph}に示す．
 
-ノードは力学モデルによってレイアウトされる．
+本システムの，ノードは力学モデルによってレイアウトされる．
 協力してタスクを行った回数によってエッジのバネ定数を変化させることで，
 頻繁に協力してタスクを行っているプロジェクトメンバを確認することができる．
-
-タスクを行った回数の合計値によってノードの半径を変化させている．
+また，タスクを行った回数の合計値によってノードの半径を変化させている．
 これにより，プロジェクトメンバが正統的周辺参加である可能性を観察することが可能である．
-
-プロジェクトメンバの所属先によってノードの色を変化させることで，
-異なる実践共同体に所属するプロジェクトメンバが，
+ノードの色は，メンバの所属先によってを変化させている．
+これにより，異なる実践共同体に所属するメンバが，
 協働でタスクを行っている様子を観察することが可能である．
 これにより，異なる色のノードがエッジでつながっている様子から，
 布置を観察することができる．
@@ -63,12 +60,10 @@ Trello上でのカードの移動履歴を利用して，
 異分野横断的なアプリ開発において，
 異なる実践共同体が協働的な関係構築を行えているかを確認し，
 必要に応じて協働的な関係構築を促すことが可能である．
-
-本システムでは以上のネットワーク構造を，
+本システムでは上記のネットワーク構造を，
 プロジェクトの時系列順にアニメーションで表示することができる．
-これにより，プロジェクトメンバの関係性の変化を観察することが可能である．
-ノードの動きから，進行状況によって変化していく，
-プロジェクトメンバの軌跡を観察することができる．
+これにより，メンバの関係性の変化を観察することで，
+進行状況によって変化していく，メンバの軌跡を観察することができる．
 
 \begin{figure}[h]
   \centering
