--- a/wiss-long-teaser/sample.bib
+++ b/wiss-long-teaser/sample.bib
@@ -1,10 +1,10 @@
-@proceedings{preStudy,
-  author = 	 {武富 拓也},
-  title = 	 {複数の実践共同体の関係構築のあり方と観光アプリケーション開発への影響の考察},
-  booktitle = {インタラクティブシステムとソフトウェアVIII},
-  pages = 	 {i-ii},
-  year = 	 {2016},
-  publisher = {日本認知科学学会},
+@article{preStudy,
+  author={武富 拓也},
+  title={複数の実践共同体の関係構築のあり方と観光アプリケーション開発への影響の考察},
+  booktitle={インタラクティブシステムとソフトウェアVIII},
+  pages={i-ii},
+  year={2016},
+  publisher={日本認知科学学会},
 }
 
 @inbook{cscwDefin,
@@ -45,12 +45,12 @@
 }
 
 @article{SuchmanDistress,
-  author = {Suchman, L.},
-  title = {Working Relations of Technology Production and Use.,Computer Supported Cooperative Work},
-  jurnal = {Springer},
-  volume = {2},
-  pages = {21-39},
-  year = {1993},
+  author={Suchman, L.},
+  title={Working Relations of Technology Production and Use.,Computer Supported Cooperative Work},
+  jurnal={Springer},
+  volume={2},
+  pages={21-39},
+  year={1993},
 }
 
 @inbook{gap,
@@ -63,23 +63,23 @@
 
 
 @article{conflict,
-  author = {徐恩之},
-  title = {職能横断的なコミュニケーションにおけるコンフリクトのトランスファー},
-  jurnal = {組織科学},
-  volume = {45},
-  number = {3},
-  pages = {21-34},
-  year = {2012},
+  author={徐恩之},
+  title={職能横断的なコミュニケーションにおけるコンフリクトのトランスファー},
+  jurnal={組織科学},
+  volume={45},
+  number={3},
+  pages={21-34},
+  year={2012},
 }
 
 @article{copImg,
-  author = {平山 絹恵, 齊藤 弘通},
-  title = {教育サービス事業組織における実践共同体の類型化に関する研究 -一般財団法人 言語交流研究所 ヒッポファミリークラブの実践共同体を事例として-},
-  jurnal = {産業能率大学紀要},
-  volume = {39},
-  number = {2},
-  pages = {1-18},
-  year = {2019},
+  author={平山 絹恵, 齊藤 弘通},
+  title={教育サービス事業組織における実践共同体の類型化に関する研究 -一般財団法人 言語交流研究所 ヒッポファミリークラブの実践共同体を事例として-},
+  jurnal={産業能率大学紀要},
+  volume={39},
+  number={2},
+  pages={1-18},
+  year={2019},
 }
 
 
@@ -92,13 +92,13 @@
   year={2010},
 }
 @article{Matsumoto,
-  author = {松本雄一},
-  title = {実践共同体概念についての一考 察: E. Wengerの実践共同体論を読み解く},
-  jurnal = {関西学院大学『商学論究』},
-  volume = {64},
-  number = {3},
-  pages = {347-409},
-  year = {2017},
+  author={松本雄一},
+  title={実践共同体概念についての一考 察: E. Wengerの実践共同体論を読み解く},
+  jurnal={関西学院大学『商学論究』},
+  volume={64},
+  number={3},
+  pages={347-409},
+  year={2017},
 }
 @inbook{uenoArt,
   author={上野直樹},
@@ -109,25 +109,25 @@
 }
 
 @article{Emotimonitor,
-  author = {Mohammed-Amr Abd El-Migid and Damon Cai and T. Niven and Jeffrey Vo and Kashumi Madampe and J. Grundy and Rashina Hoda},
-  title = {Emotimonitor: A Trello Power-Up to Capture Emotions of Agile Teams},
-  jurnal = {ArXiv},
-  volume = {abs/2105.01952},
-  year = {2021},
+  author={Mohammed-Amr Abd El-Migid and Damon Cai and T. Niven and Jeffrey Vo and Kashumi Madampe and J. Grundy and Rashina Hoda},
+  title={Emotimonitor: A Trello Power-Up to Capture Emotions of Agile Teams},
+  jurnal={ArXiv},
+  volume={abs/2105.01952},
+  year={2021},
 }
 
 @article{D3jsOfCop,
-  author = {Kou, Yubo and Gray, Colin M. and Toombs, Austin L. and Adams, Robin S.},
-  title = {Understanding Social Roles in an Online Community of Volatile Practice: A Study of User Experience Practitioners on Reddit},
-  jurnal = {Trans. Soc. Comput.},
-  volume = {1},
-  number = {4},
-  pages = {22},
-  year = {2018},
+  author={Kou, Yubo and Gray, Colin M. and Toombs, Austin L. and Adams, Robin S.},
+  title={Understanding Social Roles in an Online Community of Volatile Practice: A Study of User Experience Practitioners on Reddit},
+  jurnal={Trans. Soc. Comput.},
+  volume={1},
+  number={4},
+  pages={22},
+  year={2018},
 }
 
 @misc{trello,
-  author  = {Atlassian},
-  title   = {Trello},
-  note    = {\url{https://trello.com/ja}（参照）2021-09-01},
+  author={Atlassian},
+  title={Trello},
+  note={\url{https://trello.com/ja}（参照）2021-09-01},
 }
