--- a/wiss-long-teaser/tex/conclusion.tex
+++ b/wiss-long-teaser/tex/conclusion.tex
@@ -7,8 +7,8 @@
 アプリの機能やUIがどのように決定されていくか分析する予定である.
 加えてアプリ開発支援ソフトウェアがアプリ開発の過程にどのように影響を及ぼすかまで含めて分析を行う.
 
-また，本研究において開発した可視化システムについて，
-ノードの数が増えた際の可視性の改善が必要だと考えられる．
+また，本研究において開発した可視化システムについても，
+可視性やインタラクションの改善が必要だと考えられる．
 改善方法については，
 論文の共著関係やSNSを対象としたネットワーク可視化の先行研究をもとに検討する予定である．
 
