--- a/wiss-long-teaser/tex/system.tex
+++ b/wiss-long-teaser/tex/system.tex
@@ -32,7 +32,7 @@ Trello上でのカードの移動履歴を利用して，
 実践共同体とメンバの関係性は，
 図\ref{cop-overlap}で示したように，
 領域と要素のようなかたちで表現されてきた．
-しかし，図\ref{cop-overlap}の様な表現によって，
+しかし，従来の様な表現によって，
 実践共同体とプロジェクトメンバの関係性を可視化することを考えると，
 メンバの参加深度と同時に，
 メンバ同士の関係性を距離によって表現することは困難だと考えられる．
@@ -68,6 +68,6 @@ Trello上でのカードの移動履歴を利用して，
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.4\textwidth]{img/cop-map.eps}
-  \caption{本システムによってプロジェクトメンバの関係性を可視化した様子}
+  \caption{本システムによって可視化したプロジェクトメンバの関係性}
   \label{cop-map-graph}
 \end{figure}
