--- a/wiss-long-teaser/tex/conclusion.tex
+++ b/wiss-long-teaser/tex/conclusion.tex
@@ -5,7 +5,7 @@
 行う際に使用される予定である．
 開発したシステムから，メンバの背景と行為やメンバ間の交渉に着目し，
 アプリの機能やUIがどのように決定されていくか分析する予定である.
-加えてアプリ開発支援ソフトウェアがアプリ開発の過程にどのように影響を及ぼすかまで含めて分析を行う.
+% 加えてアプリ開発支援ソフトウェアがアプリ開発の過程にどのように影響を及ぼすかまで含めて分析を行う.
 
 また，本研究において開発した可視化システムについても，
 可視性やインタラクションの改善が必要だと考えられる．
